# openflux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
.ruff_cache/0.15.7/: 2463862663662441314  6395373262834576860  807594923616224282
docs/: adapters.md  comparison.md  cost.md  index.md  schema.md
docs/blog/: cost-analyzer-50-lines.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  app.css  types.ts
frontend/src/components/: CommandPalette.tsx  FilterBar.tsx  Layout.tsx  RelativeTime.tsx  SessionsView.tsx  StatsView.tsx  StatusBadge.tsx  TokenCount.tsx  TraceDetail.tsx  TraceTable.tsx  WasteView.tsx
frontend/src/hooks/: useKeyboard.ts  useOutcomes.ts  useStats.ts  useTrace.ts  useTraces.ts  useWaste.ts
frontend/src/lib/: format.ts
scripts/: capture_assets.py  seed_demo_data.py
src/openflux/: __init__.py  _pricing.py  _util.py  cli.py  collector.py  insights.py  normalizer.py  outcomes.py  schema.py  waste.py
src/openflux/adapters/: __init__.py  _claude_code.py  autogen.py  bedrock.py  claude_agent_sdk.py  crewai.py  google_adk.py  langchain.py  mcp.py  openai_agents.py
src/openflux/adapters/claude_code/: __init__.py  __main__.py
src/openflux/serve/: __init__.py  _api.py  _server.py
src/openflux/sinks/: __init__.py  base.py  json.py  otlp.py  sqlite.py
src/openflux/static/: index.html
src/openflux/static/assets/: app.js  index.css  motion.js  recharts.js
tests/: test_autogen_adapter.py  test_bedrock_adapter.py  test_claude_agent_sdk_adapter.py  test_claude_code_adapter.py  test_cli.py  test_crewai_adapter.py  test_google_adk_adapter.py  test_json_sink.py  test_langchain_adapter.py  test_mcp_adapter.py  test_normalizer.py  test_openai_adapter.py  test_serve.py  test_serve_outcomes.py  test_sqlite_sink.py
tests/acceptance/: .env.example  Dockerfile.base  conftest.py  docker-compose.yml  helpers.py  run.sh  test_autogen.py  test_bedrock.py  test_claude_agent_sdk.py  test_claude_code.py  test_crewai.py  test_google_adk.py  test_langchain.py  test_mcp.py  test_openai_agents.py
tests/acceptance/autogen/: Dockerfile
tests/acceptance/bedrock/: Dockerfile
tests/acceptance/claude-agent-sdk/: Dockerfile
tests/acceptance/claude-code/: Dockerfile
tests/acceptance/crewai/: Dockerfile
tests/acceptance/google-adk/: Dockerfile
tests/acceptance/langchain/: Dockerfile
tests/acceptance/mcp/: Dockerfile
tests/acceptance/openai/: Dockerfile
tests/integration/: test_claude_code_outcome.py
tests/unit/: conftest.py  test_autogen_adapter.py  test_cli.py  test_cli_outcomes.py  test_collector.py  test_crewai_adapter.py  test_init.py  test_insights.py  test_mcp_adapter.py  test_normalizer.py  test_openai_adapter.py  test_otlp_sink.py  test_outcomes.py  test_outcomes_capture.py  test_schema.py  test_sqlite_sink.py  test_util.py  test_waste.py
